# FLECSpy

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
FLECSpy2/: config.py  core.py  plots.py  sweep.py
FLECSpy2/elements/: blade_clamp_moments.py  build_constraint_reduction.py  build_mass_matrix.py  build_stiffness_matrix.py
flecspy/: config.py
flecspy/elements/: blade_constraint.py  blade_maps.py  blade_potential.py  build_stiffness_matrix.py
scripts/: frequency_vs_load.py  frequency_vs_load_vs_compression.py  lambda_vs_load_vs_compression.py  tip_vs_load.py  tip_vs_load_vs_compression.py
src/flecspy/: core.py  plots.py  sweep.py
src/flecspy/elements/: build_constraint_derivatives.py  cell_constants.py
tests/: conftest.py  test_flecs.py
tests/golden/: golden_G.csv  golden_GX.csv  golden_HX.csv  golden_Jd_tipFalse.csv  golden_Jd_tipTrue.csv  golden_Jm_tipFalse.csv  golden_Jm_tipTrue.csv  golden_Kfull.csv  golden_Mtot.csv  golden_Tred.csv  golden_U.csv  golden_Xeq.csv  golden_alpha.csv  golden_cd_tipFalse.csv  golden_cd_tipTrue.csv  golden_cellConstants.csv  golden_ceq.csv  golden_clampMoments.csv  golden_cm_tipFalse.csv  golden_cm_tipTrue.csv  golden_eq_GX.csv  golden_eq_HX.csv  golden_eq_Kfull.csv  golden_eq_Kred.csv  golden_eq_Ktot.csv  golden_eq_Mred.csv  golden_eq_Mtot.csv  golden_eq_U0.csv  golden_eq_clampMoments.csv  golden_eq_freqs.csv  golden_eq_lambda.csv  golden_eq_theta.csv  golden_theta0.csv
