[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flecspy"
version = "0.1.0"
description = "Finite-element simulation of Geometric Anti-Spring (GAS) blades for vertical seismic isolation in gravitational-wave interferometers"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
authors = [
    { name = "Nicolò Baldicchi", email = "nicolo.baldicchi@dottorandi.unipg.it" },
    { name = "Piero Chessa", email = "piero.chessa@unipg.it" },
    { name = "Giancarlo Cella", email = "giancarlo.cella@pi.infn.it" },
]
maintainers = [
    { name = "Nicolò Baldicchi", email = "nicolo.baldicchi@dottorandi.unipg.it" },
]
keywords = [
    "gravitational waves",
    "seismic isolation",
    "simulation",
    "geometric anti-spring",
    "GAS",
    "cantilever blade",
    "spring blade",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/baldicni/FLECSpy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flecspy*"]